--- a/webapp/src/assets/style.css
+++ b/webapp/src/assets/style.css
@@ -1,3 +1,10 @@
+/*
+ * Copyright (c) 2021 Lenny Angst. All rights reserved.
+ * For more information about the license read the LICENSE file at the root of this repo.
+ * Written for Project: openclass
+ * Last modified: 29.03.21, 21:15
+ */
+
 :root {
 
 }
@@ -8,7 +15,7 @@ body {
 }
 
 .card {
-    @apply block dark:bg-gray-800 rounded p-10 shadow border-2 border-gray-200 dark:border-gray-600;
+    @apply block dark:bg-gray-800 rounded p-10 border-2 border-gray-200 dark:border-gray-600;
 }
 
 .input {
