Add user loader to loggedin checker Add description and class to task details

--- a/webapp/src/assets/style.css
+++ b/webapp/src/assets/style.css
@@ -2,7 +2,7 @@
  * Copyright (c) 2021 Lenny Angst. All rights reserved.
  * For more information about the license read the LICENSE file at the root of this repo.
  * Written for Project: openclass
- * Last modified: 12.04.21, 20:22
+ * Last modified: 4/13/21, 9:52 AM
  */
 
 :root {
@@ -71,4 +71,8 @@ h2.heading {
     @apply
     text-2xl
     font-bold
+}
+
+#task-description a {
+    @apply text-indigo-500 hover:text-indigo-400 transition;
 }
